--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+/**
+*	Added smooth scrolling for demonstration 03/10/22
+*	@author Jordan Short
+*	@tag html
+*/
+html {
+	scroll-behavior: smooth;
+}
+
 * {
 	padding: 0;
 	margin: 0;
@@ -434,7 +443,7 @@ form {
 #contact textarea {
   width: 90%;
 }
-}
+
 
 @media screen and (max-width: 570px) {
 
