--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header {
   background-color: #24252a;
 }
 
-
+ /* Nav Bar */
 .nav__links {
   list-style: none;
   display: flex;
@@ -50,6 +50,8 @@ header {
   background-color: red;
   border-radius: 5px;
 }
+
+ /* Hero Section */
 
 #hero {
   height: 100vh;
@@ -93,7 +95,7 @@ header {
   color: #ee6c09;
 }
 
-/* */ 
+/* About styles */ 
 .about-header {
   background-color: rgba(149, 66, 78);
   color: white;
@@ -181,392 +183,208 @@ header {
   margin: 0 auto;
   width: 30%;
 }
+ /* Project*/
+ p { margin-bottom: 1.5em; }
 
-#portfolio {
-	background-color: #423a3a;
-	padding-bottom: 80px;
-}
+ .Projects_container {
+	display:flex;
+	height: 100vh;
+  }
+  
+  .Child_Projects_container {
+	border:5px solid white;
+  }
 
-#portfolio h2 {
-	color: #F0F0F0;
-	margin-bottom: 140px;
-}
+ article {
+   width: 500px;
+   margin: 100px auto 0;
+ }
+ 
+ header.portfolio_title_header {
+   width: 500px;
+   height: 300px;
+   overflow: hidden;
+   position: relative;
+ }
+ 
+ header.portfolio_title_header img {
+   display: block;
+   width: 600px;
+   height: 400px;
+   position: absolute;
+   top: 50%;
+   margin-top: -200px;
+   left: 50%;
+   margin-left: -300px;
+   transform-origin: 50% 50%;
+   transform: scale(0.9) rotate(-5deg);
+   transition: all 1s ease-in-out;
+ }
+ 
+ header.portfolio_title_header:hover img {
+   transform: scale(1) rotate(0);
+ }
+ 
+ header.portfolio_title_header h1 {
+   position: absolute;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   font-family: 'Yanone Kaffeesatz', sans-serif;
+   font-size: 2.5em;
+   color: #fff;
+   text-transform: uppercase;
+   background: rgba(0,0,0,0.8);
+   padding: 0 0.3em;
+   text-overflow: ellipsis;
+   overflow: hidden;
+   white-space: nowrap;
+ }
+ 
+ .content {
+   float: left; /* float left to restore height from floated tags */
+   background: #fff;
+   padding: 1em;
+ }
+ 
+ h2 {
+   font-family: 'Yanone Kaffeesatz', sans-serif;
+   font-size: 1.875em;
+   margin-bottom: 0.25em;
+ }
+ 
+ .tags li {
+   float: left;
+   background: #f2f2f2;
+   padding: 0 0.5em;
+   margin: 0 0.5em 0 0;
+   border-bottom-style: solid;
+   border-bottom-width: 3px;
+ }
+ 
+ .tags .html { border-bottom-color: #e34c26; }
+ .tags .css { border-bottom-color: #2662e3; }
+ .tags .js { border-bottom-color: #8CC84B; }
 
-#portfolio h2:after {
-	border-bottom: 2px dashed #b4b4b4;
-}
-
-#portfolio .row {
-	margin: 0px;
-	box-sizing: border-box;
-	padding: 0 60px;
-}
-
-#portfolio .heading {
-	color: #F0F0F0;
-	padding: 15px;
-	text-align: center;
-	position: absolute;
-  font-size: 18px;
-  letter-spacing: 2px;
-}
-
-#portfolio .heading span {
-	color: #635757;
-	display: block;
-	margin: 40px 0px;
-	font-size: 200%;
-}
-
-#portfolio .description {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	padding: 15px;
-}
-
-#portfolio .description > * {
-	display: none;
-	font-size: 72%;
-}
-
-#portfolio p {
-	color: #F0F0F0;
-	/*display: none;*/
-	margin-bottom: 30px;
-	line-height: 230%;
-}
-
-#portfolio p, .tools {
-	width: 100%;
-}
-
-.description span {
-	margin-left: 10px;
-}
-
-.description .tools {
-	margin-top: 20px;
-	overflow: hidden;
-}
-
-.description .tools li {
-	margin-top: 5px;
-	background-color: #114190;
-	margin-right: 10px;
-	padding: 10px;
-	color: #F0F0F0;
-}
-
-#portfolio div section {
-	cursor: pointer;
-}
-
-#portfolio div:nth-child(odd) section {
-	background-color: #483F3F;
-	padding: 10px;
-	border: 3px solid #4D4343;
-}
-
-#portfolio div:nth-child(even) section {
-	background-color: #3D3636;
-	padding: 10px;
-	border: 3px solid #393333;
-}
-
-#portfolio img {
-	width: 100%;
-}
-
-#portfolio section {
-	height: 100%;
-	margin-bottom: 20px;
-}
-
-#portfolio .overlay {
-	position: relative;
-	padding-bottom: 0px;
-	min-height: 550px;
-  overflow: auto;
-}
-
-#portfolio .description h4 {
+/* Contact header */
+ .Contact-header {
+	background-color: rgba(149, 66, 78);
 	color: white;
-}
+	padding: 20px;
+	font-size: 20px;
+	font-family: Verdana;
+	text-align: center;
+	border-style: solid;
+  }
 
-#portfolio .heading {
-	position: relative;
-	margin: 0 auto;
-}
+ /* Contact */
 
-#portfolio section {
-	width: 50%;
-	float: left;
-}
-
-#portfolio section:hover .overlay img {
-	opacity: 0;
-	transition: opacity .32s;
-}
-
-#portfolio section:hover .description {
-	top: 140px;
-	transition: top .5s;
-}
-
-#portfolio section:hover .overlay .heading span {
-	 -webkit-transform: rotate(180deg);
-	 position: relative;
-	 top: -80px;
-	 left: -30px;
-	 color: rgba(4,14,22,.83);;
+ * {
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-font-smoothing:antialiased;
+	-moz-font-smoothing:antialiased;
+	-o-font-smoothing:antialiased;
+	font-smooth:antialiased;
+	text-rendering:optimizeLegibility;
 }
 
 
-#portfolio section:hover .overlay .description > * {
-	display: block;
+
+
+.container {
+	max-width:400px;
+	width:100%;
+	margin:0 auto;
+	position:relative;
 }
 
-#portfolio section:hover .overlay .heading {
-	position: absolute;
-	top: -60px;
-	transition: top .9s;
-}
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
 
 #contact {
-	background: url("https://res.cloudinary.com/dj7k0lade/image/upload/v1526689027/codepen/portfolio/map.jpg") no-repeat;
-	background-size: cover;
+	background:#F9F9F9;
+	padding:25px;
+	margin:50px 0;
 }
 
-#contact .overlay {
-	background: rgba(0,0,0,.968);
-}
-
-#contact h2 {
-	color: white;
-}
-
-#contact h2:after {
-	border-bottom: 2px dashed white;
-}
-
-#contact form {
-	position: relative;
-}
-
-#contact .form-group label {
+#contact h3 {
+	color: #F96;
 	display: block;
-	color: white;
-	font-weight: normal;
+	font-size: 30px;
+	font-weight: 400;
 }
 
-#contact .form-group input, #contact .form-group textarea {
-	outline: none;
-	border: 0;
-	border-bottom: 6px solid #114190;
-	padding: 9px;
-	background-color: #2b2b2b;
-	color: white;
+#contact h4 {
+	margin:5px 0 15px;
+	display:block;
+	font-size:13px;
 }
 
-#contact .form-group input#emailTXT {
-	width: 75%;
-	border-bottom: 6px solid #e11a61;
-}
-
-#contact .form-group input#emailTXT {
-	border-bottom: 6px solid #e11a61;
-}
-
-#contact .form-group input#subjectTXT {
-	width: 55%;
-	border-bottom: 6px solid #9d1098;
-}
-
-#contact .form-group input#messageTXT {
-	border-bottom: 6px solid #9d1098;
-}
-
-#contact .form-group #messageTXT {
-	border-bottom: 6px solid #9d102b;
-	resize: none;
-}
-
-#contact #submitBTN {
-	color: white;
-}
-
-#contact #submitBTN:hover {
-	background-color: white;
-	color: black;
-	transition: background-color .4s;
-}
-
-#contact #submitBTN span {
-	margin-right: 20px;
-}
-
-
-#contact .social-links li {
-	margin-bottom: 20px;
-}
-
-.overlay {
-	background-color: rgba(4,14,22,.83);
-	height: 100%;
+fieldset {
+	border: medium none !important;
+	margin: 0 0 10px;
+	min-width: 100%;
+	padding: 0;
 	width: 100%;
-	padding-bottom: 80px;
 }
 
-#portfolio .overlay {
-  width: 100%;
-  height: auto;
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+	width:100%;
+	border:1px solid #CCC;
+	background:#FFF;
+	margin:0 0 5px;
+	padding:10px;
 }
 
-#portfolio img {
-  width: 100%;
-  height: auto;
-}
-
-h2 {
-  margin-top: 80px;
-}
-
-input {
-  text-align: center;
-}
-
-#about img {
-  display: block;
-  margin: 0 auto;
-  width: 30%;
-}
-
-#about .info {
-  flex-direction: column-reverse;
-}
-
-#skill-set .skills {
-  margin-top: 20px;
-}
-
-form {
-  text-align: left;
-}
-
-#portfolio .description p {
-  margin-top: 40px;
-}
-
-#portfolio section {
-  font-size: 10px;
-}
-
-#portfolio .overlay > * {
-  font-size: 200%;
-}
-
-#portfolio p, h6 {
-  text-align: left;
+#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+	-webkit-transition:border-color 0.3s ease-in-out;
+	-moz-transition:border-color 0.3s ease-in-out;
+	transition:border-color 0.3s ease-in-out;
+	border:1px solid #AAA;
 }
 
 #contact textarea {
-  width: 90%;
+	height:100px;
+	max-width:100%;
+  resize:none;
 }
 
-
-@media screen and (max-width: 570px) {
-
-#home nav {
-  width: inherit;
+#contact button[type="submit"] {
+	cursor:pointer;
+	width:100%;
+	border:none;
+	background:#0CF;
+	color:#FFF;
+	margin:0 0 5px;
+	padding:10px;
+	font-size:15px;
 }
 
-#about .signature {
-  float: none;
+#contact button[type="submit"]:hover {
+	background:#09C;
+	-webkit-transition:background 0.3s ease-in-out;
+	-moz-transition:background 0.3s ease-in-out;
+	transition:background-color 0.3s ease-in-out;
 }
 
-#portfolio h2 {
-  margin-bottom: 0;
-}
+#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
 
-#portfolio section img {
-  display: none;
+#contact input:focus, #contact textarea:focus {
+	outline:0;
+	border:1px solid #999;
 }
-
-#portfolio section {
-  width: 100%;
+::-webkit-input-placeholder {
+ color:#888;
 }
-
-#portfolio .description > *  {
-  display: block;
+:-moz-placeholder {
+ color:#888;
 }
-
-#portfolio .description {
-  display: table-footer-group;
+::-moz-placeholder {
+ color:#888;
 }
-
-#portfolio .heading {
-  display: table-header-group;
-  font-size: 180%;
-  text-align: left;
-}
-
-#portfolio .overlay {
-  min-height: auto;
-  padding: 20px;
-}
-
-#portfolio .description {
-  top: 100px;
-  position: static;
-}
-
-#portfolio section {
-  min-height: auto;
-}
-
-#portfolio section:hover .overlay .heading {
- position: relative;
- top: -0px;
- color: white;
- -webkit-transition: none;
-}
-
-#portfolio .heading span {
-  display: none;
-}
-}
-
-@media screen and (max-width: 480px) {
-
-.social-links li {
-  display: block;
-  width: 100%;
-}
-
-.social-links {
-  width: 100%;
-}
-
-h1 {
-  font-size: 300%;
-}
-
-#about img {
-  width: 60%;
-}
-
-#skill-set #web-development-skills::before {
-  display: none;
-}
-
-#skill-set .skills {
-  width: 100%;
-  display: block;
-}
-
-#portfolio .overlay {
-  height: 70%;
-}
-
+:-ms-input-placeholder {
+ color:#888;
 }
